# tutorial-performance-rust

./: Cargo.toml  Instructions.txt
lab01_nom_parsing/: Cargo.toml  README.md
lab01_nom_parsing/src/: lib.rs
lab01_nom_parsing/tests/: integration_test.rs
lab02_id_registry/: Cargo.toml  README.md
lab02_id_registry/src/: lib.rs
lab02_id_registry/tests/: integration_test.rs
lab03_bit_manipulation/: Cargo.toml  README.md
lab03_bit_manipulation/src/: lib.rs
lab03_bit_manipulation/tests/: integration_test.rs
lab04_bytemuck_repr/: Cargo.toml  README.md
lab04_bytemuck_repr/src/: lib.rs
lab04_bytemuck_repr/tests/: integration_test.rs
lab05_rayon_parallelism/: Cargo.toml  README.md
lab05_rayon_parallelism/src/: lib.rs
lab05_rayon_parallelism/tests/: integration_test.rs
lab06_data_oriented_design/: Cargo.toml  README.md
lab06_data_oriented_design/src/: lib.rs
lab06_data_oriented_design/tests/: integration_test.rs
lab07_wgpu_basics/: Cargo.toml  README.md
lab07_wgpu_basics/src/: lib.rs
lab07_wgpu_basics/tests/: integration_test.rs
lab08_wgsl_compute/: Cargo.toml  README.md
lab08_wgsl_compute/src/: lib.rs  shader.wgsl
lab08_wgsl_compute/tests/: integration_test.rs
lab09_wasm_bindgen/: Cargo.toml  README.md
lab09_wasm_bindgen/src/: lib.rs
lab09_wasm_bindgen/tests/: integration_test.rs
lab10_gpu_atomics/: Cargo.toml  README.md
lab10_gpu_atomics/src/: lib.rs  shader.wgsl
lab10_gpu_atomics/tests/: integration_test.rs
